# Pelmeni2D

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_and_run_tests.sh  clean_build_env.sh  setup_build_env.sh
docs/: architecture.md  pelmeni_animation.md  pelmeni_blueprint.md  pelmeni_conventions.md  pelmeni_debugging.md  pelmeni_ecs.md  pelmeni_gameobject.md  pelmeni_graphics.md  pelmeni_gui.md  pelmeni_input.md  pelmeni_math.md  pelmeni_object.md  pelmeni_scene.md  pelmeni_system.md  pelmeni_transform.md  resource_handling.md  utility_pool.md
resources/blueprints/: blueprint_lookup.json  blueprint_lookup_table.json  test01.json  test01_blueprint.json  test_blueprints.json  tusk_blueprint.json
resources/meshes/: test_box.json
resources/presets/: testobj01.lua
resources/scenes/: scene01.json  tbsgame.json
resources/sprites/: test_sprites.json
resources/textures/: test_textures.json  (+1 more)
src/: CMakeLists.txt  main.cpp
src/pelmeni/: CMakeLists.txt
src/pelmeni/animation/: Animable.cpp  Animable.hpp  Animation.cpp  Animation.hpp  CMakeLists.txt  Frame.cpp  Frame.hpp  Keyframe.cpp  Keyframe.hpp
src/pelmeni/debugging/: CMakeLists.txt  LogContainer.cpp  LogContainer.hpp  Logger.cpp  Logger.hpp  Logging.hpp
src/pelmeni/event/: CMakeLists.txt  Event.hpp  EventManager.cpp  EventManager.hpp
src/pelmeni/event/input/: CMakeLists.txt  InputEvent.hpp  InputManager.cpp  InputManager.hpp  Mouse.hpp  MouseButtonEvent.hpp  MouseButtonState.cpp  MouseButtonState.hpp  MouseInputManager.cpp  MouseInputManager.hpp  MouseMoveEvent.hpp  MouseState.cpp  MouseState.hpp
src/pelmeni/experimental/: CMakeLists.txt  Gish.cpp  Gish.hpp  TilemapWIP.cpp  TilemapWIP.hpp
src/pelmeni/graphics/: AnimatedSprite.cpp  AnimatedSprite.hpp  AnimationLoader.cpp  AnimationLoader.hpp  AnimationManager.hpp  AnimationState.cpp  AnimationState.hpp  Axes.cpp  Axes.hpp  CMakeLists.txt  Frame.hpp  FrameSequence.cpp  FrameSequence.hpp  FrameSequenceLoader.cpp  FrameSequenceLoader.hpp  Hexagon.cpp  Hexagon.hpp  Mesh2D.cpp  Mesh2D.hpp  MeshData2D.cpp  MeshData2D.hpp  Package.cpp  Package.hpp  PackageLoader.cpp  PackageLoader.hpp  PackageManager.cpp  PackageManager.hpp  Sprite.cpp  Sprite.hpp  Sprite3.cpp  Sprite3.hpp  SpriteBase.cpp  SpriteBase.hpp  SpritePack.hpp  SpritePackManager.cpp  SpritePackManager.hpp  SpritePackage.cpp  SpritePackage.hpp  SpritePackageLoader.cpp  SpritePackageLoader.hpp  (+13 more)
src/pelmeni/graphics/animation/: Rig.hpp
src/pelmeni/graphics/particles/: Particle.hpp  Particle2D.cpp  Particle2D.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/pelmeni/gui/: CMakeLists.txt  Text.hpp  Widget.cpp  Widget.hpp  WidgetManager.cpp  WidgetManager.hpp  WidgetOptions.cpp  WidgetOptions.hpp  WidgetStyle.cpp  WidgetStyle.hpp  WidgetTextBox.hpp
src/pelmeni/input/: CMakeLists.txt  InputEvent.cpp  InputEvent.hpp  InputListener.hpp  InputManager.cpp  InputManager.hpp  Mouse.cpp  Mouse.hpp  MouseButtonEvent.cpp  MouseButtonEvent.hpp  MouseButtonState.cpp  MouseButtonState.hpp  MouseInputManager.cpp  MouseInputManager.hpp  MouseMoveEvent.hpp  MouseState.cpp  MouseState.hpp
src/pelmeni/json/: Helpers.cpp  Helpers.hpp
src/pelmeni/lua/: LuaHelpers.hpp
src/pelmeni/math/: Bezier.hpp  BezierCurve.cpp  BezierCurve.hpp  Binomial.hpp  CMakeLists.txt  CatmullRom.hpp  CatmullRomInterpolator.hpp  CatmullRomSpline.cpp  CatmullRomSpline.hpp  ClampedValue.hpp  ConvexPolygon.cpp  ConvexPolygon.hpp  GeometrySelection.cpp  GeometrySelection.hpp  HilbertCurve.hpp  LineIntersection.cpp  LineIntersection.hpp  LineSnap.cpp  LineSnap.hpp  LinearInterpolation.hpp  Quaternion.hpp  Radian.cpp  Radian.hpp  Random.cpp  Random.hpp  Transform.cpp  Transform.hpp  Transform3.cpp  Transform3.hpp  Vector.cpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  math.cpp  math.hpp  vector.cpp  vector.hpp  vector2.hpp  vector3.hpp
src/pelmeni/math/geometry/: AxialCoordinates.hpp  Hexagon.cpp  Hexagon.hpp
src/pelmeni/math/graph/: Dijkstra.cpp  Dijkstra.hpp  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  SearchBFS.cpp  SearchBFS.hpp  TilemapGraph.cpp  TilemapGraph.hpp
src/pelmeni/physics/: Body2D.cpp  Body2D.hpp  CMakeLists.txt  Physics.cpp  Physics.hpp  Spring2D.cpp  Spring2D.hpp
src/pelmeni/system/: Blueprint.hpp  BlueprintLoader.cpp  BlueprintLoader.hpp  BlueprintManager.cpp  BlueprintManager.hpp  CMakeLists.txt  Camera.hpp  Component.hpp  ComponentPool.hpp  EngineDefs.hpp  Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityManager.cpp  EntityManager.hpp  EntityState.hpp  Instance.cpp  Instance.hpp  Node.hpp  Object.cpp  Object.hpp  ObjectLoader.cpp  ObjectLoader.hpp  ObjectManager.cpp  ObjectManager.hpp  Scene.cpp  Scene.hpp  State.cpp  State.hpp  Transform.hpp  Transformable.hpp  Transformable2.cpp  Transformable2.hpp  Transformable3.cpp  Transformable3.hpp  Viewport.cpp  Viewport.hpp
src/pelmeni/utility/: Array2D.hpp  Bitmask.hpp  ContinuousPool.hpp  GridIndex.hpp  Map.hpp  Pool.hpp  Quad.hpp  QuadContainer.hpp  Quadtree.hpp  Rect.hpp  ResourceManager.hpp  ResourceMap.hpp  Singleton.hpp  Subquad.hpp
src/platformgame/: CMakeLists.txt  main.cpp
src/tbsgame/: CMakeLists.txt  TurnResolver.hpp  main.cpp  tbsgame.md
src/testapps/: Testapp_Mesh2D.cpp  Testapp_Mesh2D.hpp  Testapp_ProjectionTesting.cpp  Testapp_ProjectionTesting.hpp  Testapp_Sprites.cpp  Testapp_Sprites.hpp  Testapp_WireMesh.cpp  Testapp_WireMesh.hpp
test/: CMakeLists.txt  TrivialTest.cpp
test/pelmeni/: Helpers.cpp  Helpers.hpp
test/pelmeni/animation/: TestAnimation.cpp  TestKeyframe.cpp
test/pelmeni/graphics/: AnimationStateTest.cpp  AnimationStateTest.hpp
test/pelmeni/input/: TestMouseButtonState.cpp  TestMouseState.cpp
test/pelmeni/math/: TestCatmullRom.cpp  TestConvexPolygon.cpp  TestGeometrySelection.cpp  TestGraph.cpp  TestLerpAndClamp.cpp  TestLineIntersection.cpp  TestLineSnap.cpp  TestQuaternion.cpp  TestTransform.cpp  TestTransform3.cpp  TestVector2.cpp
test/pelmeni/utility/: TestArray.cpp  TestGridIndex.cpp  TestPool.cpp  TestQuadContainer.cpp  TestSubquad.cpp
(+1 files in other folders)
